--- a/options.html
+++ b/options.html
@@ -8,7 +8,7 @@
         <h3>Logging style:</h3>
         <select id="loggingStyle">
             <option value="prettier">Prettier</option>
-            <option value="object">Singe Object</option>
+            <option value="object">Single Object</option>
         </select>
         <hr>
         <div id="status"></div>
